--- a/examples/html-basic/index.html
+++ b/examples/html-basic/index.html
@@ -1,9 +1,60 @@
 <!DOCTYPE html>
 <head>
-  <title>My First Webpage</title>
+  <title>Mickey Hernandez Biography</title>
+  <link type="text/css" rel="stylesheet" href="lib/css/styles.css" />
 </head>
 <body>
-  <h1>Hello, world.</h1>
-  <p>This is my <strong>first</strong> paragraph.</p>
+  <h1 id="Home">Mickey Hernandez</h1>
+  <nav>
+    <ul>
+      <li><a href="#Home">Home</a></li>
+      <li><a href="#Childhood">Childhood</a></li>
+      <li><a href="#Education">Education</a></li>
+      <li><a href="#Hobbies">Hobbies</a></li>
+      <li><a href="#Life Goals">Life Goals</a></li>
+      <li><a href="#Image Gallery">Image Gallery</a></li>
+    </ul>
+  </nav>
+
+  <div class="sections" id="Chi">
+  <h2 id="Childhood">Childhood</h2>
+  <p>Born May 9, 1998 in Acapulco, Mexico. Moved to the USA as a 1 year old.</p>
+</div>
+
+<div class="sections" id="Edu" >
+  <h2 id="Education">Education</h2>
+  <div class="center">
+    <ul>
+      <li>Lake Wylie Elementary School</li>
+      <li>Southwest Middle School</li>
+      <li>Olympic High School</li>
+    </ul>
+  </div>
+</div>
+
+<div class="sections" id="Hob">
+  <h2 id="Hobbies">Hobbies</h2>
+  <div class="center">
+  <ul>
+    <li>Movies and TV</li>
+    <li>Computer Gaming</li>
+    <li>Learning</li>
+  </ul>
+  </div>
+</div>
+
+<div class="sections" id="Lif">
+  <h2 id="Life Goals">Life Goals</h2>
+  <p>5 Lamborghinis parked under his private jet</p>
+</div>
+
+<div class="sections">
+  <h2 id="Image Gallery">Image Gallery</h2>
+  <img src="lib/img/profile.jpg" alt="Profile Pic">
+</div>
+
+<script src="lib/js/script.js"></script>
+<p>Todays Date: </p>
+<p id="todayDate"></p>
 </body>
 </html>
