added jquery validate plugin locally instead of CDN

--- a/DailyChallenges/Week8/jqueryForm/index.html
+++ b/DailyChallenges/Week8/jqueryForm/index.html
@@ -31,6 +31,6 @@
     </fieldset>
   </form>
   <script src=“http://code.jquery.com/jquery-3.2.1.js” integrity=“sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=” crossorigin=“anonymous”></script>
-  <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
+  <script src="./jquery.validate.min.js"></script>
   <script src="./scripts.js"></script>
 </body>
