--- a/DailyChallenges/Week8/jqueryForm/index.html
+++ b/DailyChallenges/Week8/jqueryForm/index.html
@@ -1,5 +1,11 @@
 <head>
-
+  <link rel="stylesheet" href="./styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
+  <script
+  src="https://code.jquery.com/jquery-3.2.1.js"
+  integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+  crossorigin="anonymous"></script>
+  <script src="./jquery.validate.min.js"></script>
 </head>
 <body>
   <form class="importantForm" id="commentForm" method="get" action="#">
@@ -30,7 +36,5 @@
       </div>
     </fieldset>
   </form>
-  <script src=“http://code.jquery.com/jquery-3.2.1.js” integrity=“sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=” crossorigin=“anonymous”></script>
-  <script src="./jquery.validate.min.js"></script>
   <script src="./scripts.js"></script>
 </body>
